fix overflow on article-unlimited

--- a/src/styles/features/end-to-end-testing/article-unlimited.scss
+++ b/src/styles/features/end-to-end-testing/article-unlimited.scss
@@ -4,6 +4,7 @@
   // scss-lint:enable ColorVariable
   border-color: transparent;
   margin-top: 0;
+  overflow: hidden;
   padding-top: $xl;
 
   @include media(sm) {
